# PORTFOLIO

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  start.sh  vercel.json
portfolio/: settings.py  urls.py
project/: views.py
project/templates/project/: base.html
static/data/: db.json
templates/: base.html
