[project]
name = "portfolio"
version = "0.1.0"
description = "Mi portafolio en Django"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "django>=5.1.7",
    "gunicorn>=21.2.0",    # Servidor WSGI en producción
    "whitenoise>=6.9.0",   # Para servir archivos estáticos
    "django-decouple>=2.1", # Para manejar variables de entorno
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
